--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "msal-angular-clone",
+  "name": "angular-msal",
   "author": {
     "name": "Marcel"
   },
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/Marcelh1983/msal-angular-clone.git"
   },
-  "version": "0.1.2",
+  "version": "0.1.0",
   "keywords": [
     "implicit",
     "angular",
