--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": ">=0.8.0"
   },
   "dependencies": {
+    "@types/es6-shim": "^0.31.39",
     "msal": "0.2.4",
     "tslib": "1.7.1"
   },
