--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "angular-msal",
   "author": {
-    "name": "Marcel"
+    "name": "Marcel Hoekstra"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/Marcelh1983/msal-angular-clone.git"
   },
-  "version": "0.1.5",
+  "version": "1.0.0",
   "keywords": [
     "implicit",
     "angular",
@@ -17,14 +17,18 @@
     "oauth"
   ],
   "main": "./dist/index.js",
+  "ngPackage": {
+    "lib": {
+      "entryFile": "src/index.ts"
+    }
+  },
+  "scripts": {
+    "build": "ng-packagr -p package.json",
+    "publish": "ng-packagr -p package.json && npm publish ./dist"
+  },
   "typings": "./dist/index.d.ts",
   "engines": {
     "node": ">=0.8.0"
-  },
-  "dependencies": {
-    "@types/es6-shim": "^0.31.39",
-    "msal": "0.2.4",
-    "tslib": "1.7.1"
   },
   "devDependencies": {
     "@angular/common": "^7.0.0",
@@ -34,30 +38,25 @@
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
+    "ng-packagr": "^5.1.0",
     "codelyzer": "~5.0.0",
     "core-js": "^2.4.1",
-    "del": "^4.1.1",
-    "gulp": "^4.0.1",
-    "gulp-bump": "^3.1.3",
-    "gulp-typescript": "^5.0.1",
-    "merge2": "^1.2.3",
-    "msal": "^0.2.4",
+    "msal": "^1.0.0",
     "rxjs": "^6.5.0",
     "tslint": "^5.15.0",
     "typescript": "3.1.6",
     "zone.js": "^0.8.26"
   },
   "peerDependencies": {
-    "@angular/common": "^7.0.0",
-    "@angular/core": "^7.0.0",
-    "rxjs": "^6.3.0"
+    "@types/es6-shim": "^0.31.39",
+    "@angular/common": ">= 6.0.0",
+    "@angular/core": ">= 6.0.0",
+    "@angular/router": ">= 6.0.0",
+    "rxjs": ">= 6.3.0",
+    "msal": ">= 1.0.0"
   },
   "directories": {
     "test": "tests"
-  },
-  "scripts": {
-    "build": "gulp clean && gulp compile && gulp copy",
-    "publish": "npm run build && gulp copy && gulp publish"
   },
   "description": "@azure/angular-msal clone with support for Angular 6+ and Internet Explorer"
 }
