--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/Marcelh1983/angular-msal.git"
   },
-  "version": "1.0.5",
+  "version": "1.1.0-beta.0",
   "keywords": [
     "implicit",
     "angular",
@@ -16,43 +16,49 @@
     "msal",
     "oauth"
   ],
-  "main": "./dist/index.js",
+  "main": "./package/index.js",
   "ngPackage": {
     "lib": {
-      "entryFile": "src/index.ts"
+      "entryFile": "modules/index.ts"
     },
     "whitelistedNonPeerDependencies": [
       "."
     ]
   },
   "scripts": {
-    "build": "ng-packagr -p package.json",
-    "publish": "ng-packagr -p package.json && npm publish ./dist"
+    "build": "rimraf dist && ng-packagr -p package.json",
+    "publish-beta": "npm run build && npm publish ./dist --tag beta",
+    "publish": "npm run build && npm publish ./dist",
+    "start": "ng serve --port 4201"
   },
   "typings": "./dist/index.d.ts",
   "engines": {
     "node": ">=0.8.0"
   },
   "dependencies": {
-    "msal": "~1.0.2"
+    "msal": "~1.2.1"
   },
   "devDependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "ng-packagr": "^5.3.0",
-    "codelyzer": "~5.1.0",
-    "rxjs": "^6.5.0",
-    "tslint": "^5.18.0",
-    "typescript": "3.4.3",
-    "zone.js": "^0.9.1"
+    "@types/es6-shim": "^0.31.39",
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular/cli": "~9.0.1",
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/router": "^9.0.0",
+    "ng-packagr": "^9.0.0",
+    "bootstrap": "4.4.1",
+    "codelyzer": "~5.2.1",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.5.4",
+    "eslint": "^6.8.0",
+    "typescript": "3.7.5",
+    "zone.js": "^0.10.2"
   },
   "peerDependencies": {
-    "@types/es6-shim": "^0.31.39",
     "@angular/common": ">= 6.0.0",
     "@angular/core": ">= 6.0.0",
     "@angular/router": ">= 6.0.0",
@@ -61,5 +67,5 @@
   "directories": {
     "test": "tests"
   },
-  "description": "msal with Angular using msal@1.0.0, with support for Angular6+ and es5"
+  "description": "msal with Angular using msal@1.x, with support for Angular6+ and es5"
 }
