--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/Marcelh1983/angular-msal.git"
   },
-  "version": "1.1.0-beta.0",
+  "version": "1.1.1",
   "keywords": [
     "implicit",
     "angular",
