--- a/package.json
+++ b/package.json
@@ -39,34 +39,29 @@
     "node": ">=0.8.0"
   },
   "dependencies": {
-    "msal": "~1.3.1"
+    "msal": "~1.3.2"
   },
   "devDependencies": {
     "@types/es6-shim": "^0.31.40",
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "~9.1.7",
-    "@angular/common": "^9.1.9",
-    "@angular/compiler": "^9.1.9",
-    "@angular/compiler-cli": "^9.1.9",
-    "@angular/core": "^9.1.9",
-    "@angular/platform-browser": "^9.1.9",
-    "@angular/platform-browser-dynamic": "^9.1.9",
-    "@angular/router": "^9.1.9",
-    "ng-packagr": "^9.1.5",
+    "@angular-devkit/build-angular": "~0.1000.1",
+    "@angular/cli": "~10.0.1",
+    "@angular/common": "^10.0.3",
+    "@angular/compiler": "^10.0.3",
+    "@angular/compiler-cli": "^10.0.3",
+    "@angular/core": "^10.0.3",
+    "@angular/platform-browser": "^10.0.3",
+    "@angular/platform-browser-dynamic": "^10.0.3",
+    "@angular/router": "^10.0.3",
+    "ng-packagr": "^10.0.0",
     "bootstrap": "4.5.0",
-    "codelyzer": "~5.2.2",
+    "codelyzer": "~6.0.0",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.5",
-    "eslint": "^7.1.0",
-    "typescript": "3.7.5",
+    "rxjs": "^6.6.0",
+    "eslint": "^7.4.0",
+    "typescript": "3.9.6",
     "zone.js": "^0.10.3"
   },
-  "peerDependencies": {
-    "@angular/common": ">= 6.0.0",
-    "@angular/core": ">= 6.0.0",
-    "@angular/router": ">= 6.0.0",
-    "rxjs": ">= 6.3.0"
-  },
+  "peerDependencies": {},
   "directories": {
     "test": "tests"
   },
