--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,14 +1,15 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "include": [
-    "demo/**/*.ts"
+  "files": [
+    "demo/main.ts",
+    "demo/polyfills.ts"
   ],
-  "exclude": [
-    "demo/test.ts",
-    "demo/**/*.spec.ts"
+  "include": [
+    "demo/**/*.d.ts"
   ]
 }
